projects/bot_eval_run/release_gate_local_after_node_cmd_retry_20260224_201147/python-ai-stdlib-oracle_run_02/iterations/03/cmd_python_-m_mini_ai.cli_--help.stderr.txt
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "C:\Users\atrep\Desktop\Test_AI_Code\shumilek\projects\bot_eval_run\release_gate_local_after_node_cmd_retry_20260224_201147\python-ai-stdlib-oracle_run_02\workspace\mini_ai\cli.py", line 4, in <module>
    from mini_ai.markov import MarkovChain
  File "C:\Users\atrep\Desktop\Test_AI_Code\shumilek\projects\bot_eval_run\release_gate_local_after_node_cmd_retry_20260224_201147\python-ai-stdlib-oracle_run_02\workspace\mini_ai\markov.py", line 47
    mc = cls(order=d["order"])
    ^^
IndentationError: expected an indented block after function definition on line 46
